--- a/app/Geist/Geist.entitlements
+++ b/app/Geist/Geist.entitlements
@@ -4,7 +4,7 @@
 <dict>
 	<key>com.apple.developer.associated-domains</key>
 	<array>
-		<string>appli</string>
+		<string>applinks:eth-global-lisboa.vercel.app</string>
 	</array>
 	<key>com.apple.security.app-sandbox</key>
 	<true/>
