--- a/contracts/foundry.toml
+++ b/contracts/foundry.toml
@@ -5,9 +5,5 @@ libs = ["lib"]
 
 # See more config options https://github.com/foundry-rs/foundry/tree/master/config
 
-
-[rpc_endpoints]
-goerli = "${GOERLI_RPC_URL}"
-
-[etherscan]
-goerli = { key = "${ETHERSCAN_API_KEY}" }
+#fail_on_revert = true
+#solc_version = "0.8.11"
